--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "author": "stasE",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "3.0.4",
+    "body-parser": "1.18.3",
     "express": "4.16.4",
+    "express-session": "1.15.6",
     "isomorphic-unfetch": "3.0.0",
     "moment": "2.24.0",
     "mongodb": "3.1.13",
